; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_activex.c_create_doc.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_activex.c_create_doc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@IID_IPropertyNotifySink = common dso_local global i32 0, align 4
@PropertyNotifySink = common dso_local global i32 0, align 4
@doc_complete = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @create_doc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @create_doc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i32* (...) @create_document()
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @TRUE, align 4
  %8 = call i32 @set_client_site(i32* %6, i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @doc_load_string(i32* %9, i8* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @do_advise(i32* %12, i32* @IID_IPropertyNotifySink, i32* @PropertyNotifySink)
  br label %14

14:                                               ; preds = %22, %1
  %15 = load i32, i32* @doc_complete, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %14
  %18 = call i64 @GetMessageW(i32* %4, i32* null, i32 0, i32 0)
  %19 = icmp ne i64 %18, 0
  br label %20

20:                                               ; preds = %17, %14
  %21 = phi i1 [ false, %14 ], [ %19, %17 ]
  br i1 %21, label %22, label %25

22:                                               ; preds = %20
  %23 = call i32 @TranslateMessage(i32* %4)
  %24 = call i32 @DispatchMessageW(i32* %4)
  br label %14

25:                                               ; preds = %20
  %26 = load i32*, i32** %3, align 8
  ret i32* %26
}

declare dso_local i32* @create_document(...) #1

declare dso_local i32 @set_client_site(i32*, i32) #1

declare dso_local i32 @doc_load_string(i32*, i8*) #1

declare dso_local i32 @do_advise(i32*, i32*, i32*) #1

declare dso_local i64 @GetMessageW(i32*, i32*, i32, i32) #1

declare dso_local i32 @TranslateMessage(i32*) #1

declare dso_local i32 @DispatchMessageW(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
